tree-sitter-bml/corpus/field_definitions.txt
==================
Single-bit field (b1)
==================
field ODR0: b1 bit[0]
---

(field_definition
  name: (identifier)
  (named_type
    (identifier))
  (integer_literal))

==================
Multi-bit field (u32, range)
==================
field MODER0: u32 bit[0..1]
---

(field_definition
  name: (identifier)
  (named_type
    (identifier))
  (integer_literal)
  (integer_literal))

==================
Field with readonly access
==================
field BSY: b1 bit[0] readonly
---

(field_definition
  name: (identifier)
  (named_type
    (identifier))
  (integer_literal)
  access: (access_modifier))

==================
Field with writeonly access
==================
field WO: b1 bit[0] writeonly
---

(field_definition
  name: (identifier)
  (named_type
    (identifier))
  (integer_literal)
  access: (access_modifier))

==================
Fields inside register inside peripheral
==================
peripheral GPIOA at 0x40020000 {
    reg MODER offset 0x00 {
        field MODER0: u32 bit[0..1]
        field MODER1: u32 bit[2..3]
    }
    reg ODR offset 0x14 {
        field ODR0: b1 bit[0]
        field ODR3: b1 bit[3]
    }
}
---

(source_file
  (peripheral_definition
    name: (identifier)
    (integer_literal)
    (register_definition
      name: (identifier)
      (integer_literal)
      (field_definition
        name: (identifier)
        (named_type
          (identifier))
        (integer_literal)
        (integer_literal))
      (field_definition
        name: (identifier)
        (named_type
          (identifier))
        (integer_literal)
        (integer_literal)))
    (register_definition
      name: (identifier)
      (integer_literal)
      (field_definition
        name: (identifier)
        (named_type
          (identifier))
        (integer_literal))
      (field_definition
        name: (identifier)
        (named_type
          (identifier))
        (integer_literal)))))

==================
Multiple fields of different types
==================
peripheral PORT at 0x40000000 {
    reg CRL offset 0x00 {
        field MODE0: u32 bit[0..1]
        field CNF0: u32 bit[2..3]
        field ODR0: b1 bit[0]
        field BSRR: u16 bit[0..15]
    }
}
---

(source_file
  (peripheral_definition
    name: (identifier)
    (integer_literal)
    (register_definition
      name: (identifier)
      (integer_literal)
      (field_definition
        name: (identifier)
        (named_type
          (identifier))
        (integer_literal)
        (integer_literal))
      (field_definition
        name: (identifier)
        (named_type
          (identifier))
        (integer_literal)
        (integer_literal))
      (field_definition
        name: (identifier)
        (named_type
          (identifier))
        (integer_literal))
      (field_definition
        name: (identifier)
        (named_type
          (identifier))
        (integer_literal)
        (integer_literal)))))
